# CppCurses

./: .gitignore  CMakeLists.txt  README.md  curses.cpp  file_browser.cpp  file_browser.h  help_page.cpp  help_page.h  multi_viewer.cpp  multi_viewer.h  torrent_expander.cpp  torrent_expander.h  torrent_formatter.h  torrent_logger.cpp  torrent_logger.h  torrent_reader.cpp  torrent_reader.h  torrent_toggle.cpp  torrent_toggle.h
.github/workflows/: cmake-multi-platform.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  TerminalCPP  cmake_install.cmake  compile_commands.json
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  torrent_tests  torrent_tests[1]_include.cmake  torrent_tests[1]_tests.cmake
tests/: CMakeLists.txt  README.md  file_browser_test.cpp  help_page_test.cpp  multi_viewer_test.cpp  torrent_expander_test.cpp  torrent_reader_test.cpp
tests/data/: invalid.torrent  nested_struct.torrent  simple_dict.torrent  valid_torrent.torrent
